syntax = "proto3";

package user;

option go_package = "github.com/Varun5711/shorternit/proto/user";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);

  rpc Login(LoginRequest) returns (LoginResponse);

  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);

  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);

  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  string user_id = 1;
  string email = 2;
  string name = 3;
  string token = 4;
  int64 created_at = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string email = 2;
  string name = 3;
  string token = 4;
  int64 expires_at = 5;
}

message GetProfileRequest {
  string token = 1;
}

message GetProfileResponse {
  User user = 1;
}

message UpdateProfileRequest {
  string token = 1;
  string name = 2;
  string email = 3;
}

message UpdateProfileResponse {
  User user = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  int64 expires_at = 3;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}
